--- a/public/style.css
+++ b/public/style.css
@@ -6,6 +6,7 @@
  * 2. Prevent adjustments of font size after orientation changes in
  *    IE on Windows Phone and in iOS.
  */
+@import url("https://fonts.googleapis.com/css?family=Overpass");
 html {
   line-height: 1.15;
   /* 1 */
@@ -392,32 +393,49 @@ template {
 *, *:before, *:after {
   box-sizing: border-box; }
 
+body {
+  font-family: Georgia;
+  font-weight: 100; }
+
 .search-wrapper {
   display: flex;
   flex-wrap: wrap;
-  height: 100vh; }
+  height: 100vh;
+  max-height: 100vh; }
 
 .search-input {
   width: 100%; }
 
-.search-list {
-  flex-basis: 50%;
+.search, .product-info {
+  flex-basis: 40%;
   height: 100%;
   overflow-y: scroll; }
+
+.product-info {
+  flex-basis: 60%;
+  display: flex; }
+
+.product-info__img {
+  width: 50%; }
+
+.product-info__txt {
+  width: 50%; }
 
 .search-item {
   cursor: pointer;
   display: flex;
-  justify-content: space-between; }
+  justify-content: space-between;
+  align-items: center;
+  padding-right: 30px; }
   .search-item img {
     height: 100%;
-    width: 100px;
+    width: 70px;
     object-fit: contain; }
   .search-item * {
     flex: 0 auto; }
-
-.product-info {
-  flex-basis: 50%; }
+  .search-item:hover {
+    background: black;
+    color: white; }
 
 img {
   max-width: 100%; }
